<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.fragment_top">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">


        <TextView
            android:id="@+id/currentDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/current_day"
            android:textSize="25sp"
            android:textStyle="normal" />


        <TextView
            android:id="@+id/steps_solid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/currentDay"
            android:layout_centerHorizontal="true"
            android:text="@string/steps_solidpart"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/distanceIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="150dp"
            android:src="@mipmap/men" />

        <TextView
            android:id="@+id/distanceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/distanceIcon"
            android:layout_marginLeft="10dp"
            android:text="@string/distance" />

        <TextView
            android:id="@+id/distanceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/distanceText"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/distance_value"
            android:textSize="20sp"

            />

        <ImageView
            android:id="@+id/tempoIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"

            android:layout_marginTop="150dp"
            android:src="@mipmap/speedometer"

            />

        <TextView
            android:id="@+id/tempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tempoIcon"
            android:layout_centerHorizontal="true"
            android:text="@string/tempo" />

        <TextView
            android:id="@+id/tempoValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tempo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/tempoValue"

            android:textSize="20sp" />


        <ImageView
            android:id="@+id/caloriesIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/caloriesText"
            android:layout_alignRight="@+id/caloriesText"
            android:layout_alignTop="@+id/tempoIcon"
            android:src="@mipmap/calories" />


        <TextView
            android:id="@+id/caloriesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/caloriesIcon"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="900dp"
            android:layout_toRightOf="@+id/tempo"
            android:text="@string/calories"

            />

        <TextView
            android:id="@+id/caloriesValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/caloriesText"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@+id/tempoValue"
            android:text="@string/caloriesValue"
            android:textSize="20dp" />


    </RelativeLayout>
</FrameLayout>
